# stm32f407g-disc

./: .gitignore  Cargo.toml  openocd.gdb
examples/: gpio_hal_blinky.rs  serial_echo.rs  serial_panic.rs
src/: led.rs  lib.rs
